fix 'end' to 'flex-end'

--- a/src/sass/pages/show.scss
+++ b/src/sass/pages/show.scss
@@ -129,7 +129,7 @@
 .end-lines {
   width: 95%;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 
   .show-lines2 {
     height: 70px;
