--- a/src/sass/pages/action.scss
+++ b/src/sass/pages/action.scss
@@ -1,16 +1,16 @@
-.action-main{
+.action-main {
   margin-top: 100px;
-  padding: 4rem 4rem 0 4rem ;
+  padding: 4rem 4rem 0 4rem;
   position: relative;
   width: 90%;
   min-height: 70vh;
 
-  .action-title{
+  .action-title {
     text-align: center;
-  };
+  }
 
-  .carousel{
-    .photos-line{
+  .carousel {
+    .photos-line {
       position: relative;
       width: max-content;
       display: flex;
@@ -19,8 +19,8 @@
       overflow-x: auto;
       margin-top: 50px;
       margin-bottom: 50px;
-    
-      li{
+
+      li {
         display: inline-block;
         position: relative;
         margin: 0px;
@@ -28,59 +28,59 @@
         margin-left: 1%;
         margin-right: 1%;
         height: 130px;
-        padding: .5rem;
+        padding: 0.5rem;
 
-        img{
+        img {
           object-fit: contain;
           margin: auto;
-          transition-duration: .5s;
+          transition-duration: 0.5s;
           height: 100%;
         }
       }
     }
   }
 
-  .action-lines1{
+  .action-lines1 {
     height: 70px;
     width: 55%;
     position: absolute;
     top: 0;
-  };
+  }
 
-  .action-description{
+  .action-description {
     width: 80%;
     text-align: justify;
     margin: auto;
     margin-bottom: 40px;
 
-    ul{
-      list-style: none;    
-    };
-  };
+    ul {
+      list-style: none;
+    }
+  }
 
-  .links{
+  .links {
     width: 80%;
     margin: auto;
     margin-top: 10px;
 
-    li{
+    li {
       margin-bottom: 10px;
     }
 
-    .action-link{
+    .action-link {
       color: black;
-    };
+    }
 
-    .icon{
+    .icon {
       font-size: 18px;
       margin-left: 10px;
       vertical-align: middle;
-    };
-  };
+    }
+  }
 
   @media screen and (max-width: 1400px) {
     padding: 4rem 3rem 0 3rem;
-  };
+  }
 
   @media screen and (max-width: 1200px) {
     padding: 4rem 0 0 0;
@@ -89,69 +89,66 @@
     .carousel {
       width: 80%;
       margin: auto;
-    };
+    }
 
-    .action-lines1{
+    .action-lines1 {
       position: absolute;
       left: 4rem;
-      width: 60%
+      width: 60%;
     }
-  };
-  
+  }
+
   @media screen and (max-width: 800px) {
-    .action-title{
-      h1{
+    .action-title {
+      h1 {
         font-size: 34px !important;
-      };
-
-    };
-    .carousel{
-      .photos-line{
-        li{
-          height: 110px;
-        };
-      };
-    };
-
-    .action-lines1{
-      height: 60px;
-      width: 70%
+      }
     }
-  };
+    .carousel {
+      .photos-line {
+        li {
+          height: 110px;
+        }
+      }
+    }
+
+    .action-lines1 {
+      height: 60px;
+      width: 70%;
+    }
+  }
 
   @media screen and (max-width: 600px) {
-    .action-title{
-      h1{
+    .action-title {
+      h1 {
         font-size: 30px !important;
-      };
-    };
-  };
-
-};
-.end-lines{
+      }
+    }
+  }
+}
+.end-lines {
   width: 95%;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 
-  .action-lines2{
+  .action-lines2 {
     height: 70px;
     width: 55%;
-  };
+  }
 
   @media screen and (max-width: 800px) {
-    .action-lines2{
+    .action-lines2 {
       width: 65%;
       height: 60px;
-      margin-top: 10px
-    };
-  };
+      margin-top: 10px;
+    }
+  }
 
   @media screen and (max-width: 500px) {
-    .action-lines2{
+    .action-lines2 {
       width: 75%;
       height: 60px;
-      margin-top: 10px
+      margin-top: 10px;
     }
-  };
-
-};
+  }
+}
