--- a/src/sass/commons/commons.scss
+++ b/src/sass/commons/commons.scss
@@ -1,52 +1,54 @@
 @import "../commons/colors.scss";
 
-.no-list-style{
+$navbarHeight: 70px;
+
+.no-list-style {
   list-style: none;
   padding-left: 0;
-};
+}
 
-.btn-no-style{
+.btn-no-style {
   border: none;
   background-color: transparent;
 }
 
-.flex-space-between{
+.flex-space-between {
   display: flex;
   justify-content: space-between;
-  align-items: center
-};
+  align-items: center;
+}
 
-.flex-space-around{
+.flex-space-around {
   display: flex;
   justify-content: space-around;
-};
+}
 
-.flex-space-evenly{
+.flex-space-evenly {
   display: flex;
-  justify-content:space-evenly
-};
+  justify-content: space-evenly;
+}
 
-.pointer{
+.pointer {
   cursor: pointer;
-};
+}
 
-.fullwidth{
+.fullwidth {
   width: 100%;
-};
+}
 
 .bold {
   font-weight: bolder;
-};
+}
 
-.main-app{
+.main-app {
   position: relative;
-};
+}
 
-.link{
+.link {
   text-decoration: none;
   color: inherit !important;
-};
+}
 
-.loading-content{
-  text-align: center
-};
+.loading-content {
+  text-align: center;
+}
